** RELEASE 1.4.0 (?) **

* Rename Beaver.parse to Beaver.filter
* Add [a new] Beaver.parse, which just parses and returns the requests, with no option to filter

** RELEASE 1.3.1 (06/30/2012) **

* Bugfix to Rails parsing, where an incomplete log entry would cause the next entry to be skipped

** RELEASE 1.3.0 (06/25/2012) **

* Added HTTP Combined Log parser (Apache, Nginx, etc.)
* Bugfixes to :after and :before Date/Time options
* tablize now available inside "dam" blocks
* --print now works with never-ending input like "tail -f ... | beaver ..."
* Allow Rails log parser to see IPv6 addresses
* Allow a dam to define its hit
* Code cleanup

** RELEASE 1.2.0 (01/30/2012) **

* Updates the the parser so that Rails's tagged logging doesn't break it
* Added DSL and command-line support for filtering Rails logs by tag(s)

** RELEASE 1.1.0 (12/8/2011) **

* Ability to parse log content from pipes and stdin
* Improved performance for large logs (Beaver#stream)
* Reduced memory usage (theoretically, anyway)
* Added Rails controller and action matchers, methods, etc.
* Various minor improvements

** RELEASE 1.0.0 (12/3/2011) **

* Added a response format parser and matcher (html, json, etc)
* Ability to pass simple DSL options directly through the command-line, making DSL files optional
* Ability to run multiple Beaver DSL files at once
* Bugfixes

** RELEASE 0.0.1 (09/24/2011) **

* Initial release