@@ -1,7 +1,8 @@
 ** RELEASE 1.4.0 (?) **
 
 * Rename Beaver.parse to Beaver.filter
-* Add [a new] Beaver.parse, which just parses and returns the requests, with no option to filter
+* Added [a new] Beaver.parse, which just parses and returns the requests, with no option to filter
+* Added Beaver.dam
 
 ** RELEASE 1.3.1 (06/30/2012) **
 
